<resources>

	<string name="app_name">Workout Logger</string>
	<string name="title_home">WORKOUT LOGGER</string>
	<string name="title_exercise">Exercise</string>
	<string name="title_exercises">EXERCISES</string>
	<string name="title_edit_exercise">EDIT EXERCISE</string>
	<string name="title_workouts">Workouts</string>
	<string name="title_workout">Workout</string>
	<string name="title_weight">Weight</string>
	<string name="title_statistics">Statistics</string>
	<string name="title_settings">Settings</string>
	<string name="title_app_logs">Application Logs</string>
	<string name="title_warning">Warning</string>

	<string name="datepicker_set_date">Set planDate</string>
	<string name="timepicker_set_time">Set time</string>
	<string name="numpicker_set_number">Set number</string>

	<string name="btn_select">Select</string>
	<string name="btn_clear">Clear</string>
	<string name="btn_ok">OK</string>
	<string name="btn_cancel">Cancel</string>

	<string name="exer_name">Name</string>
	<string name="exer_description">Description</string>
	<string name="exer_delete_this_exe">Delete this exercise?</string>
	<string name="exer_groups_not_specified">Groups not specified</string>

	<string name="exe_activity_all_exercises">All exercises</string>
	<string name="exe_activity_favorites">Favorites</string>

	<string name="workoutpos_name">Name</string>
	<string name="workoutpos_date">Date</string>
	<string name="workoutpos_weight">Weight</string>
	<string name="workoutpos_comment">Comment</string>
	<string name="workoutpos_add_exercise">Add exercise</string>
	<string name="workoutpos_exercises">Exercises:</string>

	<string name="list_item_cont_desc">Item menu</string>

	<string name="menu_item_exe_add">Add exercise</string>
	<string name="menu_item_workout_add">Add workout</string>
	<string name="menu_item_add">Add</string>
	<string name="menu_item_accept">Accept</string>
	<string name="menu_item_replace">Replace</string>
	<string name="menu_item_edit">Edit</string>
	<string name="menu_item_delete">Delete</string>
	<string name="menu_item_search">Search</string>

	<string name="menu_item_video">Watch video</string>
	<string name="menu_item_add_to_favorites">Add to favorites</string>
	<string name="menu_item_remove_from_favorites">Remove from favorites</string>

	<string name="drawer_open">Main menu opened</string>
	<string name="drawer_closed">Main menu closed</string>

	<!-- Menu item to open the Home screen [CHAR_LIMIT=20] -->
	<string name="navdrawer_item_home">Home</string>
	<!-- Menu item to open the History screen [CHAR_LIMIT=20] -->
	<string name="navdrawer_item_history">History</string>
	<!-- Menu item to open the Workouts screen [CHAR_LIMIT=20] -->
	<string name="navdrawer_item_workouts">Workouts</string>
	<!-- Menu item to open the Exercises screen [CHAR_LIMIT=20] -->
	<string name="navdrawer_item_exercises">Exercises</string>
	<!-- Menu item to open the Statistics screen [CHAR_LIMIT=20] -->
	<string name="navdrawer_item_statistics">Statistics</string>
	<!-- Menu item to open the Measurements screen [CHAR_LIMIT=20] -->
	<string name="navdrawer_item_measurements">Measurements</string>
	<!-- Menu item to open the Settings screen [CHAR_LIMIT=20] -->
	<string name="navdrawer_item_settings">Settings</string>

	<!-- Shown in the 'About' window of the app. -->
	<string name="about_body"><![CDATA[
    	<b>Workout Logger 2017</b><br>
		Version %s<br><br>
		<a href="http://#/">Application site</a>
	]]></string>

	<string-array name="units_array">
		<item>Metric</item>
		<item>Imperial</item>
	</string-array>

	<string-array name="units_values">
		<item>1</item>
		<item>2</item>
	</string-array>

	<string-array name="exercises_types_array">
		<item>Other</item>
		<item>Back</item>
		<item>Breast</item>
		<item>Shoulders</item>
		<item>Belly</item>
		<item>Biceps</item>
		<item>Triceps</item>
		<item>Forearms</item>
		<item>Feet</item>
		<item>Shin</item>
	</string-array>
	<integer-array name="exercises_num_types_array">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
		<item>8</item>
		<item>9</item>
	</integer-array>
	<string name="date_picker_date">Date:</string>
	<string name="time_picker_time">Time:</string>
	<string name="title_muscle_groups">Muscle groups</string>

	<string name="log_logs">Logs</string>
	<string name="log_send_by_email">Send by email</string>
	<string name="log_open_logs_folder">Open logs folder</string>
	<string name="log_clear">Clear log file</string>
	<string name="log_no_email_clients">There are no email clients installed</string>
	<string name="log_choose_app">Choose application</string>
	<string name="log_saving_logs_into_file">Saving log into file</string>
	<string name="log_logs_wont_be_recorded">Logs are not recording</string>
	<string name="log_logs_will_be_recorded">Logs are recording</string>
	<string name="log_no_data">No data</string>

	<string name="common_error">Unexpected error was occurred</string>
</resources>
